--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7 December 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span>Sulthansha Nazeer</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 963 375 2092</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Trivandrum, Kerala</span></li>
                 </ul>
@@ -104,7 +104,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Sulthanpriv@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sulthanpriv@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -194,7 +194,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>"Dedicated and detail-oriented full stack developer seeking a challenging role in web development. Leveraging 2+ years of experience and a passion for creating responsive and user-friendly interfaces."</p>
+        <p>"Dedicated and detail-oriented full stack developer seeking a challenging role in web development. Passion for creating responsive and user-friendly interfaces."</p>
       </div><!-- End Section Title -->
 
       <div class="container">
